infra/k8/kafka-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka-ui-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka-ui
    template:
        metadata:
            labels:
                app: kafka-ui
        spec:
            containers:
                - name: kafka-ui
                  image: provectuslabs/kafka-ui:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: kafka-ui-srv
spec:
    selector:
        app: kafka-ui
    ports:
        - name: kafka-broker
          protocol: TCP
          port: 8080
          targetPort: 8080
