infra/k8/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order
    template:
        metadata:
            labels:
                app: order
        spec:
            containers:
                - name: order
                  image: kneonix/order:latest
                  imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
    name: order-clusterip-srv
spec:
    selector:
        app: order
    ports:
        - name: order
          protocol: TCP
          port: 3000
          targetPort: 3000
