infra/k8/order-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order-mongo
    template:
        metadata:
            labels:
                app: order-mongo
        spec:
            containers:
                - name: order-mongo
                  image: mongo:latest
                  imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
    name: order-mongo-srv
spec:
    selector:
        app: order-mongo
    ports:
        - name: order-mongodb
          protocol: TCP
          port: 27017
          targetPort: 27017
