infra/k8/payment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payment-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: payment-mongo
    template:
        metadata:
            labels:
                app: payment-mongo
        spec:
            containers:
                - name: payment-mongo
                  image: mongo:latest
                  imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
    name: payment-mongo-srv
spec:
    selector:
        app: payment-mongo
    ports:
        - name: payment-mongodb
          protocol: TCP
          port: 27017
          targetPort: 27017
