infra/k8/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticket-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticket
    template:
        metadata:
            labels:
                app: ticket
        spec:
            containers:
                - name: ticket
                  image: kneonix/ticket:latest
                  imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
    name: ticket-clusterip-srv
spec:
    selector:
        app: ticket
    ports:
        - name: ticket
          protocol: TCP
          port: 3000
          targetPort: 3000
