infra/k8/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ticket-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ticket-mongo
    template:
        metadata:
            labels:
                app: ticket-mongo
        spec:
            containers:
                - name: ticket-mongo
                  # its comes from docker hub
                  image: mongo:latest
                  imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
    name: ticket-mongo-srv
spec:
    selector:
        app: ticket-mongo
    ports:
        - name: ticket-mongodb
          protocol: TCP
          port: 27017
          targetPort: 27017
