infra/k8/zookeeper.dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zookeeper-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zookeeper
    template:
        metadata:
            labels:
                app: zookeeper
        spec:
            containers:
                - name: zookeeper
                  image: confluentinc/cp-zookeeper:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
    name: zookeeper-srv
spec:
    selector:
        app: zookeeper
    ports:
        - name: zookeeper
          protocol: TCP
          port: 2181
          targetPort: 2181
