infra/k8/ingress-srv.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: ingress-srv
spec:
    entryPoints:
        - web
        - websecure
    tls:
        secretName: admin
    routes:
        - match: Host(`ticketing.dev`) && PathPrefix(`/api/users`)
          kind: Rule
          services:
              - name: auth-clusterip-srv
                port: 3000

        - match: Host(`ticketing.dev`) && PathPrefix(`/api/tickets`)
          kind: Rule
          services:
              - name: ticket-clusterip-srv
                port: 3000

        - match: Host(`ticketing.dev`) && PathPrefix(`/api/orders`)
          kind: Rule
          services:
              - name: order-clusterip-srv
                port: 3000

        - match: Host(`ticketing.dev`) && PathPrefix(`/api/payments`)
          kind: Rule
          services:
              - name: payment-clusterip-srv
                port: 3000

        - match: Host(`ticketing.dev`) && PathPrefix(`/`)
          kind: Rule
          services:
              - name: client-clusterip-srv
                port: 3000
